# Nivelamento

./: .gitignore  Operadoras API.postman_collection.json  README.md  requirements.txt  saida.csv  transformacao_dados.py  web_scrapper.py
banco_dados/: preencher_querries_service.py
consultor_csv/back-end/: app.py  pyproject.toml
consultor_csv/back-end/resources/: Relatorio_cadop - Relatorio_cadop.csv
consultor_csv/back-end/web-app/: package.json
consultor_csv/back-end/web-app/src/assets/: main.css
consultor_csv/colecao-postman/: Operadoras API.postman_collection.json  Operadoras API.postman_test_run.json  response-medica.json  response-operadora.json
consultor_csv/consultor-csv-frontend/: README.md
consultor_csv/consultor-csv-frontend/src/components/: Lista.vue
consultor_csv/front-end/: index.html  package-lock.json
consultor_csv/front-end/consultor-csv/: README.md  package-lock.json  package.json
consultor_csv/front-end/consultor-csv/src/: App.vue
consultor_csv/front-end/consultor-csv/src/components/: Lista.vue
consultor_csv/front-end/src/: App.vue
consultor_csv/front-end/src/components/: Lista.vue
resources/: Rol_de_Procedimentos_e_Eventos.csv
resources/anexos/: 1T2023.csv
teste_banco_dados/: preencher_querries_service.py  querries.sql
teste_transformacao_dados/: transformacao_dados.py
teste_web_scrapping/: web_scrapper.py
transformacao_dados/: transformacao_dados.py
web_scrapping/: web_scrapper.py
