[tool.poetry]
name = "Consultor-Operadoras-Csv"
version = "0.1.0"
description = "Projeto integrando um frontend em Vue.js com um backend em Flask para realizar operações de busca dentro de uma base de dados em CSV"
authors = ["João Pedro Andrade Paes Pimentel Barbosa <jpandradepaesdev@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.2.2"
Flask-Cors = "^3.0.10"

[tool.poetry.dev-dependencies]
pytest = "^7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
